--- a/src/main/java/com/bolaihui/weight/gui/form/WeightForm.form
+++ b/src/main/java/com/bolaihui/weight/gui/form/WeightForm.form
@@ -441,7 +441,7 @@
                   <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <grid id="17e78" layout-manager="GridLayoutManager" row-count="1" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="17e78" layout-manager="GridLayoutManager" row-count="1" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -455,7 +455,7 @@
                 <children>
                   <component id="6f100" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <font size="23"/>
@@ -464,12 +464,12 @@
                   </component>
                   <hspacer id="84477">
                     <constraints>
-                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </hspacer>
                   <component id="dbadf" class="javax.swing.JLabel" binding="zmdWeightYesCount">
                     <constraints>
-                      <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                      <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <minimum-size width="120" height="-1"/>
                         <preferred-size width="120" height="-1"/>
                         <maximum-size width="120" height="-1"/>
@@ -483,7 +483,7 @@
                   </component>
                   <component id="edd14" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <font size="23"/>
@@ -492,7 +492,7 @@
                   </component>
                   <component id="7a9c9" class="javax.swing.JLabel" binding="zmdWeightNoCount">
                     <constraints>
-                      <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                      <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <minimum-size width="130" height="-1"/>
                         <preferred-size width="130" height="-1"/>
                         <maximum-size width="130" height="-1"/>
@@ -537,6 +537,21 @@
                       <font size="23"/>
                       <foreground color="-12316161"/>
                       <text value="重量不检查模式"/>
+                    </properties>
+                  </component>
+                  <component id="8c924" class="javax.swing.JButton" binding="modelChangeBtn">
+                    <constraints>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <minimum-size width="-1" height="25"/>
+                        <preferred-size width="-1" height="25"/>
+                        <maximum-size width="-1" height="25"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <background color="-1536"/>
+                      <enabled value="true"/>
+                      <foreground color="-12316161"/>
+                      <text value="开启检测"/>
                     </properties>
                   </component>
                 </children>
@@ -794,7 +809,7 @@
                         <properties>
                           <font size="24" style="1"/>
                           <foreground color="-12316161"/>
-                          <text value="12"/>
+                          <text value="13"/>
                         </properties>
                       </component>
                     </children>
@@ -1020,7 +1035,7 @@
                         <properties>
                           <font size="24" style="1"/>
                           <foreground color="-12316161"/>
-                          <text value="12"/>
+                          <text value="13"/>
                         </properties>
                       </component>
                     </children>
